--- a/Graficos-2-Coccia/Engine/Engine.vcxproj
+++ b/Graficos-2-Coccia/Engine/Engine.vcxproj
@@ -149,11 +149,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LogicalPlane.cpp" />
     <ClCompile Include="src\3D\Mesh.cpp" />
     <ClCompile Include="src\3D\Model.cpp" />
     <ClCompile Include="src\Animation\Animation.cpp" />
     <ClCompile Include="src\BSP\BSP.cpp" />
+    <ClCompile Include="src\BSP\LogicalPlane.cpp" />
     <ClCompile Include="src\Camera\Camera.cpp" />
     <ClCompile Include="src\CollisionManager\CollisionManager.cpp" />
     <ClCompile Include="src\Cube\Cube.cpp" />
@@ -179,11 +179,11 @@
     <ClCompile Include="src\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LogicalPlane.h" />
     <ClInclude Include="src\3D\Mesh.h" />
     <ClInclude Include="src\3D\Model.h" />
     <ClInclude Include="src\Animation\Animation.h" />
     <ClInclude Include="src\BSP\BSP.h" />
+    <ClInclude Include="src\BSP\LogicalPlane.h" />
     <ClInclude Include="src\Camera\Camera.h" />
     <ClInclude Include="src\CollisionManager\CollisionManager.h" />
     <ClInclude Include="src\Cube\Cube.h" />
