--- a/Graficos-2-Coccia/Engine/Engine.vcxproj
+++ b/Graficos-2-Coccia/Engine/Engine.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="src\Sprite\Sprite.cpp" />
     <ClCompile Include="src\TextureImporter\TextureImporter.cpp" />
     <ClCompile Include="src\Time\Time.cpp" />
+    <ClCompile Include="src\Transform\Transform.cpp" />
     <ClCompile Include="src\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -208,6 +209,7 @@
     <ClInclude Include="src\TextureImporter\stb_image.h" />
     <ClInclude Include="src\TextureImporter\TextureImporter.h" />
     <ClInclude Include="src\Time\Time.h" />
+    <ClInclude Include="src\Transform\Transform.h" />
     <ClInclude Include="src\Window\Window.h" />
   </ItemGroup>
   <ItemGroup>
